# marl

./: .gitignore  README.md  biased_replay.ipynb  biased_replay_results.ipynb  bottlenecks.py  bun.lockb  delayed_run.sh  file.json  load.py  local-graph copy.ipynb  local-graph.ipynb  out.txt  package-lock.json  package.json  policy_comparisons.ipynb  pyproject.toml  run.py  run.sh  run_experiments.sh  showcase  test.ipynb  test.pkl  test.toml  trajectories.ipynb
.github/agents/: architectural-agent.md  frontend-ux.agent.md  rl-expert.md
data/: lvl6-best-actions-without-top-gem.json  lvl6-best-actions.json
doc/: train_example.py
examples/: basic_experiment.py  communication_partial_observability.py  dqn.py  gym_example.py  multi_agent_cnn.py  plot_results.py  train_example.py  web_ui.py
experiments/: discover-bottlenecks.ipynb  discover-bottlenecks.py
experiments/results/: 1-agent.json  2-agents.json  3-agents.json  4-agents.json
maps/: 0b  1b  2b  2b-1  2b-2  2b-3  2b-4  2b-5  2b-6  2b-bis  2b-quad.toml  2b-ter  3b  4b  5b  b-width-1  b-width-2  b-width-4  four_rooms-2.toml  four_rooms.toml  four_rooms_small-1.toml  four_rooms_small-2.toml  generate.py  hall  lvl1  lvl2  lvl3  lvl3_without_gem  lvl4  lvl5  lvl6  lvl6-gems-everywhere  lvl6-no-gems  lvl6-no-lasers  lvl6-no-lasers.toml  lvl6-shaping  lvl6-shaping-shifted  lvl6-start-above.toml  script.py  showcase  (+14 more)
maps/11x11/test/: env-50  env-51  env-52  env-53  env-54  env-55  env-56  env-57  env-58  env-59
maps/11x11/train/: env-0  env-1  env-10  env-11  env-12  env-13  env-14  env-15  env-16  env-17  env-18  env-19  env-2  env-20  env-21  env-22  env-23  env-24  env-25  env-26  env-27  env-28  env-29  env-3  env-30  env-31  env-32  (+23 more)
maps/alternating/: lvl3  lvl5  lvl6
maps/normal/: lvl3  lvl5  lvl6
maps/pool/: generator.py  world-0  world-1  world-10  world-11  world-12  world-13  world-14  world-15  world-16  world-17  world-18  world-19  world-2  world-20  world-21  world-22  world-23  world-24  world-25  world-26  world-27  world-28  world-29  world-3  world-30  world-31  world-32  world-33  world-34  world-35  world-36  world-37  world-38  world-39  world-4  world-40  world-41  world-42  world-43  (+61 more)
maps/test_maps/: env-0  env-1  env-2  env-4  env-5  env-7  env-8  env-9
maps/train_maps/: env-0  env-10  env-11  env-12  env-13  env-14  env-15  env-16  env-18  env-19  env-2  env-21  env-22  env-24  env-25  env-26  env-27  env-29  env-3  env-31  env-32  env-33  env-34  env-35  env-36  env-37  env-39  env-40  env-41  env-42  env-43  env-45  env-46  env-47  env-48  env-5  env-6  env-8
papers/: .gitignore  convert.py
src/: bench.py  c4.py  config_example.py  create_experiments.py  debug.py  distil.py  explore.py  kill.py  main.py  main_nodes.py  make_csv.py  nodes.py  other.py  parameter_search.py  pl_tests.py  properties.py  qmix.py  render.py  retest.py  run.py  serve.py  showcase.py  start_run.py  stats_tests.py  status.py  test copy.py  test-graph.py  test.py  test2.py  test_marl2.py  test_smac.py  trajectories.py  truc.py  tuning.py  value_iteration.py  videos.py  wip.py
src/analysis/: aggregate.py  stats.py  tensorboard_mean_std.py
src/debug-ui/: .gitignore  package-lock.json  tsconfig.json
src/marl/: __init__.py  exceptions.py  marl_algo.py  runner.py
src/new_marl/: ddqn.py  dqn.py  dqn_2.py  dqn_3.py  dqn_4.py  mixed_dqn.py  mixers.py  policy.py  recurrent_mixed_ddqn.py  recurrent_mixed_dqn.py  schedule.py  vanilla_rdqn.py
src/phil/: dqn_torch.py  main.py
src/ui/: .gitignore  bun.lockb  index.html  package-lock.json  package.json  patchwork_runner.py  tsconfig.json
src/xmarl/: frame_viewer.py  lvl_dol_1  lvl_dol_2  lvl_save_2  patchwork_runner.py  patchwork_runner_term.py
src/xmarl_extra/: episode.py  transition.py
tests/: test_algorithms.py  test_batch.py  test_batches.py  test_dqn_trainer.py  test_experiments.py  test_gpu_utils.py  test_intrinsic_curiosity.py  test_memories.py  test_mixers.py  test_nodes.py  test_option_critic.py  test_parallel_runner_scheduler.py  test_policies.py  test_ppoc.py  test_qmix.py  test_rdqn.py  test_registry.py  test_runner.py  test_runs.py  test_schedules.py  test_stats.py  tests.rdqn.py  two_steps.py  utils.py
tests/envs/: __init__.py  matrix_game.py
(+745 files in other folders)
