[project]
name = "marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "laser-learning-environment<=2.3.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.5",
    "scipy>=1.14.1",
    "sumtree>=0.2.7",
    "polars>=1.5.0",
    "neptune>=1.10.4",
    "matplotlib>=3.9.2",
    "flask>=3.0.3",
    "websockets>=12.0",
    "icecream>=2.1.3",
    "typed-argparse>=0.3.1",
    "flask-cors>=4.0.1",
    "seaborn>=0.13.2",
    "multi-agent-rlenv<=3.3.6",
    "jupyterlab>=4.3.4",
    "scikit-learn>=1.5.2",
    "pygame>=2.6.1",
    "orjson>=3.10.12",
    "numpy>=2.0",
    "swig>=4.3.0",
    # "gymnasium[box2d]>=1.0.0",
    "pettingzoo>=1.24.3",
]

[project.optional-dependencies]
torch-cpu = ["torch>=2.6.0"]
torch-cu118 = ["torch>=2.6.0"]
torch-cu124 = ["torch>=2.6.0"]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-cu124" },
        { extra = "torch-cu118" },
    ],
]
dev-dependencies = ["pytest>=8.3.2", "pytest-xdist>=3.6.1"]


[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "torch-cpu" },
    { index = "torch-cu118", extra = "torch-cu118" },
    { index = "torch-cu124", extra = "torch-cu124" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 140
