[project]
name = "marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.5",
    "scipy>=1.14.1",
    "sumtree>=0.2.7",
    "polars>=1.5.0",
    "matplotlib>=3.10.8",
    "flask>=3.0.3",
    "websockets>=12.0",
    "icecream>=2.1.3",
    "typed-argparse>=0.3.1",
    "flask-cors>=4.0.1",
    "seaborn>=0.13.2",
    "multi-agent-rlenv>=3.6.0",
    "jupyterlab>=4.3.4",
    "scikit-learn>=1.5.2",
    "pygame>=2.6.1",
    "orjson>=3.10.12",
    "numpy>=2.0",
    "swig>=4.3.0",
    "textual>=4.0.0",
    "mplcursors>=0.6",
    "torch<2.8",
    "laser-learning-environment>=2.6",
    "wandb>=0.21.2",
    "neptune>=1.14.0",
    "tensorboard>=2.20.0",
    "smac",
]


[dependency-groups]
dev = ["pytest>=8.3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 140

[tool.uv.sources]
smac = { git = "https://github.com/oxwhirl/smac.git" }
