[project]
name = "marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
  "fastapi>=0.135.2",
  "jupyterlab>=4.3.4",
  "laser-learning-environment>=2.6",
  "matplotlib>=3.10.8",
  "mplcursors>=0.6",
  "multi-agent-rlenv>=4.0.0",
  "neptune>=1.14.0",
  "numpy>=2.0",
  "orjson>=3.10.12",
  "polars>=1.5.0",
  "pysc2",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "seaborn>=0.13.2",
  "smac",
  "sumtree>=0.2.7",
  "swig>=4.3.0",
  "tensorboard>=2.20.0",
  "textual>=4.0.0",
  "torch",
  "tqdm>=4.66.5",
  "typed-argparse>=0.3.1",
  "uvicorn>=0.34.3",
  "wandb>=0.21.2",
  "websockets>=12.0",
]

[project.optional-dependencies]
# Use `uv sync --extra legacy-gpu` to sync on the MLG cluster and have a torch version compatible with the GPUs.
legacy-gpu = ["torch<2.8"]

[dependency-groups]
dev = ["marker-pdf>=1.10.2", "pytest>=8.3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
# Ignore deprecation warnings caused by SMAC
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140

[tool.uv.sources]
smacv2 = { git = "https://github.com/oxwhirl/smacv2.git" }
smac = { git = "https://github.com/oxwhirl/smac.git" }
pysc2 = { git = "https://github.com/google-deepmind/pysc2.git", rev = "0df53d3" }
